@@ -1,9 +1,18 @@
+2002-01-03  Darin Adler  <darin@bentspoon.com>
+
+	* libnautilus-private/nautilus-global-preferences.c:
+	(nautilus_global_preferences_init):
+	* libnautilus-private/nautilus-sidebar-functions.c:
+	(sidebar_panel_make_preference_key):
+	* libnautilus-private/nautilus-sidebar-functions.h:
+	Remove some help sidebar panel remnants.
+
 2002-01-03  Michael Meeks  <michael@ximian.com>
 
 	* components/image-viewer/io-png.c
 	(image_save): disable png stuff.
 
-2001-12-21  Michael Meeks  <michael@ximian.com>
+2001-01-03  Michael Meeks  <michael@ximian.com>
 
 	* configure.in: bump requirements on bonobo to get
 	something that works well.
